--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,27 @@
 .App {
+  display: flex;
+  flex-direction: column;
   text-align: center;
   background-color: #282c34;
   min-height: 100vh;
-  flex-direction: column;
   align-items: left;
-  justify-content: center;
+  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
 .App-inputs{  
   align-items: center;
-  padding:20px;
+  padding:1em;
   border-bottom: 1px solid white;
   display: flex;
+}
+
+@media (max-width: 600px) { /* media query for screens less than 600px wide */
+  .App-inputs {
+    flex-direction: column; 
+    padding:0.5em; 
+  }
 }
 
 .MIDISounds
@@ -24,7 +32,7 @@
 
 #debug
 {
-  /* display: none; */
+  display: none;
   position: fixed;
   top:0px;
   right:0px;
@@ -35,4 +43,13 @@
 .octave-selector
 {
   margin-left: 20px;
+}
+
+.currentNote {
+  position: fixed;
+  top:0px;
+  right: 0px;
+  border: 1px solid black;
+  background-color: grey;
+  width: 50px;
 }
