--- a/src/components/ClickFirst.css
+++ b/src/components/ClickFirst.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     z-index: 9999;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.9);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,3 +24,6 @@
     font-size: 2em;
   }
   
+  .overlay-content p.smol {
+    font-size: 1em;
+  }
