--- a/src/components/Select.css
+++ b/src/components/Select.css
@@ -12,8 +12,7 @@
   flex-direction: column;    
 }
 
-.selectLabel {  
-}
+.selectLabel {}
 
 .selectElement {
   width: 100px;
@@ -30,6 +29,4 @@
   box-shadow: 0 0 5px rgba(66, 133, 244, 0.2);
 }
 
-.selectElement option {  
-  
-}
+.selectElement option {}
