--- a/src/components/RainbowText.css
+++ b/src/components/RainbowText.css
@@ -7,13 +7,16 @@
   }
   
   @keyframes rainbow {
-    0% {color: #ff0000;}
-    14% {color: #ff7f00;}
-    28% {color: #ffff00;}
-    42% {color: #00ff00;}
-    57% {color: #0000ff;}
-    71% {color: #4b0082;}
-    85% {color: #8b00ff;}
-    100% {color: #ff0000;}
-  }
+    0% {color: #FF0000;}
+    10% {color: #FF7F00;}
+    20% {color: #FFFF00;}
+    30% {color: #00FF00;}
+    40% {color: #00FFFF;}
+    50% {color: #0000FF;}
+    60% {color: #8A2BE2;}
+    70% {color: #7F00FF;}
+    80% {color: #7F007F;}
+    90% {color: #FF00FF;}
+    100% {color: #FF0000;}
+}
   
