--- a/src/components/NotesGrid.css
+++ b/src/components/NotesGrid.css
@@ -9,7 +9,7 @@
   font-weight: 700;
   background-color: #f0f8ff;
   overflow: hidden;
-  font-family: 'Roboto', sans-serif;
+  /* font-family: 'Roboto', sans-serif; */
 }
 
 .loop-grid-contain {
