--- a/src/Buttons.css
+++ b/src/Buttons.css
@@ -1,70 +1,36 @@
-@-webkit-keyframes stripe-slide {
-  0% {
-    background-position: 0% 0;
-  }
-  100% {
-    background-position: 100% 0;
-  }
-}
-@keyframes stripe-slide {
-  0% {
-    background-position: 0% 0;
-  }
-  100% {
-    background-position: 100% 0;
-  }
-}
-
 button {  
-  overflow: visible;
-  margin: 0;
-  padding: 0;
-  border: 0;
   background: transparent;
-  line-height: normal;
   cursor: pointer;
   -moz-user-select: text;
-  display: block;
-  text-decoration: none;
-  text-transform: uppercase;
-  padding: 8px 10px;
-  background-color: #fff;
-  color: #666;
-  border: 2px solid #666;  
-  font-weight: 700;
-  transition: all 0.5s ease;
-  position: relative;
+  display: block; 
+  text-transform: uppercase;      
+  transition: all 0.5s ease;  
 }
 
-button:-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-
-button:after {
-  content: "";
-  display: block;
-  height: 3px;
-  width: 100%;
-  overflow: hidden;
-  background-image: repeating-linear-gradient(45deg, #666, #666 1px, transparent 2px, transparent 5px);
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  border-top: 1px solid #666;
-  position: absolute;
-  left: 0;
-  left: 0;
-  bottom: 0;
-  background-size: 7px 7px;
-}
-button:hover {
-  background-color: #666;
-  color: #fff;
+button:hover {  
+  
   border-color: #282c34;
+  border-radius: 12px;
+
+  animation-name: rainbow-buttons;
+  animation-duration: 2s;    
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;      
 }
-button:hover:after {
-  background-image: repeating-linear-gradient(45deg, #fff, #fff 1px, transparent 2px, transparent 5px);
-  border-top: 1px solid #000;
-  -webkit-animation: stripe-slide 12s infinite linear forwards;
-          animation: stripe-slide 12s infinite linear forwards;
+
+@keyframes rainbow-buttons {
+  0% {color: #FF0000;}
+  10% {color: #FF7F00;}
+  20% {color: #FFFF00;}
+  30% {color: #00FF00;}
+  40% {color: #00FFFF;}
+  50% {color: #0000FF;}
+  60% {color: #8A2BE2;}
+  70% {color: #7F00FF;}
+  80% {color: #7F007F;}
+  90% {color: #FF00FF;}
+  100% {color: #FF0000;}
 }
+
+
+
