--- a/src/components/NotesGrid.css
+++ b/src/components/NotesGrid.css
@@ -7,7 +7,7 @@
   flex-grow: 1;
   font-size: calc(1px + 1.5vmin);
   font-weight: 700;
-  background-color: #f0f8ff;
+  background-color: #FDF7F1;
   overflow: hidden;
   /* font-family: 'Roboto', sans-serif; */
 }
@@ -25,7 +25,8 @@
 }
 
 .note-cell {  
-  border: 1px solid #BBBBBB;
+  border-top: 1px solid #BBBBBB;
+  border-bottom: 1px solid #BBBBBB;
   text-align: center;
   flex: 1;
   overflow: hidden;   
