--- a/src/Buttons.css
+++ b/src/Buttons.css
@@ -1,17 +1,16 @@
-button {  
+button, .rainbow-button {  
   background: transparent;
   cursor: pointer;
   -moz-user-select: text;
   display: block; 
+  text-decoration:none;
   text-transform: uppercase;      
   transition: all 0.5s ease;  
 }
 
-button:hover {  
-  
+button:hover, .rainbow-button:hover {  
   border-color: #282c34;
   border-radius: 12px;
-
   animation-name: rainbow-buttons;
   animation-duration: 2s;    
   animation-iteration-count: infinite;
