--- a/src/Doodle/doodle.css
+++ b/src/Doodle/doodle.css
@@ -49,7 +49,7 @@
     border-image: url(button.svg) 10 10 10 10 stretch stretch;
   }
   
-  .doodle button, .doodle input, .doodle select, .doodle input[type="file"]::file-selector-button {
+  .doodle button, .doodle input, .doodle select, .doodle input[type="file"]::file-selector-button,  .doodle .slider {
     border-style: solid;
     border-width: 10px 10px 10px 10px;
     border-image: url(button.svg) 10 10 10 10 stretch stretch;
