--- a/src/components/NotesGrid.css
+++ b/src/components/NotesGrid.css
@@ -38,6 +38,7 @@
 .note-label {  
   color: #282c34;    
   display: flex;   
+  min-width: 40px;
 }
 
 @media (max-width: 600px) { 
@@ -50,8 +51,8 @@
 
 .note-present {
   background-color: #282c34;
-  color:white;
-  border-radius: 20px;
+  color:white;  
+  font-size: 1em; 
 }
 
 .active-note {  
@@ -59,8 +60,7 @@
 }
 
 .active-row .active-note {  
-  background-color: #1b3a9e;  
-  border-radius: 20px;
+  background-color: #1b3a9e;    
 }
 
 .active-row {
