--- a/src/components/RainbowText.css
+++ b/src/components/RainbowText.css
@@ -1,22 +1,44 @@
 .rainbow-text {        
-    animation-name: rainbow;
-    animation-duration: 3s;
+    animation-name: rainbow-text;
+    animation-duration: 32s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;    
-    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+    text-shadow: -1px 0 #f5ffff98, 0 1px #f5ffff98, 1px 0 #f5ffff98, 0 -1px #f5ffff98;    
+  }
+
+  .rainbow-background {        
+    animation-name: rainbow-background;
+    animation-duration: 13s;
+    padding:2px;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;    
+    /* text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white; */
   }
   
-  @keyframes rainbow {
-    0% {color: #FF0000;}
-    10% {color: #FF7F00;}
-    20% {color: #FFFF00;}
-    30% {color: #00FF00;}
-    40% {color: #00FFFF;}
-    50% {color: #0000FF;}
-    60% {color: #8A2BE2;}
-    70% {color: #7F00FF;}
-    80% {color: #7F007F;}
-    90% {color: #FF00FF;}
-    100% {color: #FF0000;}
+  @keyframes rainbow-text {
+    0% {color: #ff000096;}
+    10% {color: #ff800096;}
+    20% {color: #ffff0097;}
+    30% {color: #00ff0090;}
+    40% {color: #00ffff98;}
+    50% {color: #0000ff8f;}
+    60% {color: #892be286;}
+    70% {color: #8000ff83;}
+    80% {color: #7f007f86;}
+    90% {color: #ff00ff7c;}
+    100% {color: #ff00007f;}
 }
   
+@keyframes rainbow-background {
+  0% {background-color: #ff000096;}
+  10% {background-color: #ff800096;}
+  20% {background-color: #ffff0097;}
+  30% {background-color: #00ff0090;}
+  40% {background-color: #00ffff98;}
+  50% {background-color: #0000ff8f;}
+  60% {background-color: #892be286;}
+  70% {background-color: #8000ff83;}
+  80% {background-color: #7f007f86;}
+  90% {background-color: #ff00ff7c;}
+  100% {background-color: #ff00007f;}
+}
