Made the slider look more like it's select sisters

--- a/src/App.css
+++ b/src/App.css
@@ -97,6 +97,10 @@ input[type="range"] {
   padding:0px;
 }
 
-.center {
-  text-align: center;
+.sliderWrapper
+{
+  display: flex;
+  color: #ffffff;
+  padding: 2px;
+  text-align: center;   
 }
