--- a/src/components/NotesGrid.css
+++ b/src/components/NotesGrid.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
-
 .notes-grid {
   display: flex;
   flex-direction: column;
@@ -13,37 +11,37 @@
 }
 
 .loop-grid-contain {
-  flex-grow: 1;   
-  display: flex; 
-  overflow: hidden; 
+  flex-grow: 1;
+  display: flex;
+  overflow: hidden;
 }
 
 .note-row {
   display: flex;
   width: 100%;
-  flex-grow: 1;      
+  flex-grow: 1;
 }
 
-.note-cell {  
+.note-cell {
   border-top: 1px solid #BBBBBB;
   border-bottom: 1px solid #BBBBBB;
   text-align: center;
   flex: 1;
-  overflow: hidden;   
-  display: flex;   
+  overflow: hidden;
+  display: flex;
   justify-content: center;
-  align-items: center;   
+  align-items: center;
 }
 
-.note-label {  
-  color: #282c34;    
-  display: flex;   
+.note-label {
+  color: #282c34;
+  display: flex;
   min-width: 40px;
 }
 
-@media (max-width: 600px) { 
+@media (max-width: 600px) {
   .note-label {
-    font-size: 1em; 
+    font-size: 1em;
   }
 }
 
@@ -51,28 +49,30 @@
 
 .note-present {
   background-color: #282c34;
-  color:white;  
-  font-size: 1em; 
+  color: white;
+  font-size: 1em;
 }
 
-.active-note {  
-  background-color: #dee4fd;  
+.active-note {
+  background-color: #dee4fd;
 }
 
-.active-row .active-note {  
-  background-color: #1b3a9e;    
+.active-row .active-note {
+  background-color: #1b3a9e;
 }
 
 .active-row {
   background-color: #dee4fd;
 }
 
-.chosen-note-row {  
-  /* background-color: #6c757d; */
-}
+.chosen-note-row {}
 
 .note-in-mode {
   font-weight: 1000;
-  background-color: #282c34; 
+  background-color: #282c34;
   color: #dee4fd;
+}
+
+.filling-note-row .note-cell {
+  background-color: #1b3a9e;   
 }
