A very cool opacity hack for making the lines look more 3D.

--- a/src/Buttons.css
+++ b/src/Buttons.css
@@ -18,17 +18,17 @@ button:hover, .rainbow-button:hover {
 }
 
 @keyframes rainbow-buttons {
-  0% {color: #FF0000;}
-  10% {color: #FF7F00;}
-  20% {color: #FFFF00;}
-  30% {color: #00FF00;}
-  40% {color: #00FFFF;}
-  50% {color: #0000FF;}
-  60% {color: #8A2BE2;}
-  70% {color: #7F00FF;}
-  80% {color: #7F007F;}
-  90% {color: #FF00FF;}
-  100% {color: #FF0000;}
+  0% {color: #ff000096;}
+  10% {color: #ff800096;}
+  20% {color: #ffff0097;}
+  30% {color: #00ff0090;}
+  40% {color: #00ffff98;}
+  50% {color: #0000ff8f;}
+  60% {color: #892be286;}
+  70% {color: #8000ff83;}
+  80% {color: #7f007f86;}
+  90% {color: #ff00ff7c;}
+  100% {color: #ff00007f;}
 }
 
 
