--- a/src/components/LineRenderer.css
+++ b/src/components/LineRenderer.css
@@ -1,11 +1,9 @@
 .line-container {
-    position: relative;        
-    width: 100%;
-    height:150px;        
-    padding:5px;
-  }
+  text-align: center;    
+  padding:10px;             
+}
   
-  .line-canvas {    
-    width: 100%;    
-    height: 100%;
-  }
+.line-canvas {
+  width: 50%;
+  height: 100%;
+}
