Minor style improvements.

--- a/src/App.css
+++ b/src/App.css
@@ -17,14 +17,14 @@
   color:#f3f5f7; 
   max-height: 1000px;
   overflow: hidden;
-  transition: opacity 0.3s, transform 0.3s, max-height 0.3s ease-in-out;
+  transition: opacity 1s, transform 1s, max-height 1s ease-in-out;
 }
 
 .App-inputs.hidden {
   opacity: 0;
-  transform: translateY(-100%);
+  transform: translateX(-100%);
   max-height: 0;
-  transition: opacity 0.3s, transform 0.3s, max-height 0.3s ease-in-out;
+  transition: opacity 1s, transform 1s, max-height 1s ease-in-out;
 }
 
 .App-inputs .title {    
