Slightly hidden ability to have a more accurate tempo.

--- a/src/App.css
+++ b/src/App.css
@@ -142,3 +142,13 @@ h1 {
 {
   text-align: center;
 }
+
+.tempo-input {
+  width:1ch;
+  border:none !important;
+  padding: 0px;
+  margin: 0px;
+  background-color: #282c34;
+  color:#f3f5f7;   
+  font-family: 'Short Stack', cursive, sans-serif;  
+}
