--- a/src/Doodle/doodle.css
+++ b/src/Doodle/doodle.css
@@ -121,7 +121,7 @@
     padding: 0px;
   }
   
-  .doodle button, .doodle textarea, .doodle input, .doodle select {    
+  .doodle button, .doodle textarea, .doodle select {    
     font-family: 'Short Stack', cursive;
     font-size: 1em;
     color: #ffffff;
