--- a/src/components/SecondFretboard.css
+++ b/src/components/SecondFretboard.css
@@ -1,7 +1,5 @@
-.fretboard {
-    display: flex;
-    color:white;
-    flex-direction: column;
+.fretboard {    
+    color:white;    
   }
   
   .string {
@@ -11,21 +9,26 @@
   
   .note, .fret {
     width: 100%;
-    height: 35px;
+    height: 30px;
     border: 1px solid black;
     display: flex;
     align-items: center;
     justify-content: center;
     margin-left: 2px;
     font-size: 0.6em;     
+    cursor: pointer;      
+    border-radius: 5px;    
+    justify-content: center;
+    align-items: center;
+    min-width: 10px;    
   }
   
   .highlight {
-    background-color: yellow;
+    background-color: #794bc4;
   }
 
   .fret.preferred-fret {
     color:white;
     font-weight: bold;
-    border:1px solid rgb(196, 47, 47);
+    border:1px solid #a3a3a3;
   }
