--- a/src/components/SecondFretboard.css
+++ b/src/components/SecondFretboard.css
@@ -3,24 +3,24 @@
   }
   
   .string {
-    display: flex;
-    margin-bottom: 5px;
+    display: flex;    
   }
   
   .note, .fret {
-    width: 100%;
-    height: 30px;
-    border: 1px solid black;
     display: flex;
     align-items: center;
-    justify-content: center;
-    margin-left: 2px;
+    justify-content: center;    
+
     font-size: 0.6em;     
     cursor: pointer;      
-    border-radius: 5px;    
-    justify-content: center;
-    align-items: center;
+
+    margin:0px;
     min-width: 10px;    
+    width: 100%;
+    height: 30px;
+            
+    border: 1px solid black;    
+    border-radius: 5px;    
   }
   
   .highlight {
