--- a/src/components/SecondFretboard.css
+++ b/src/components/SecondFretboard.css
@@ -3,13 +3,14 @@
 }
 
 .fretboard {
-  color: white;
+  position: relative;
   font-size: 0.8em;
 }
 
 .string {
   display: flex;
   justify-content: space-between;
+  position: relative;
 }
 
 .note,
@@ -29,16 +30,12 @@
   width: 100%;
   height: 30px;
 
-  border: 1px solid #282c34;
   border-radius: 5px;
+  border: 1px solid #282c34;
 }
 
 .highlight {
   background-color: #794bc4 !important;
-}
-
-.fret.preferred-fret {
-  border: 1px solid #794bc4;
 }
 
 .scale-note {
@@ -61,5 +58,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 10px; /* adjust as needed */
+  height: 10px;
+}
+
+.fretboard::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: calc((100% / 25) * var(--preferred-start));
+  width: calc((100% / 25) * var(--preferred-range));
+  border: 3px solid #794bc4;
+  box-sizing: border-box;
+  z-index: 1;
+  box-shadow: rgba(121, 75, 196, 0.56) 0px 0px 60px 20px;
 }
