A more visually cool line renderer.

--- a/src/components/LineRenderer.css
+++ b/src/components/LineRenderer.css
@@ -1,6 +1,8 @@
 .line-container {
-  text-align: center;    
-  padding:10px;             
+  text-align: center;
+  padding: 10px;
+  cursor: pointer;
 }
-  
-.line-canvas {}
+
+.line-canvas {
+}
