--- a/src/components/SecondFretboard.css
+++ b/src/components/SecondFretboard.css
@@ -56,6 +56,14 @@
   margin-top: 10px;
 }
 
+.fret-number {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  font-size: 0.6em;
+  color: #ccc;
+}
+
 .fret-indicator {
   display: flex;
   justify-content: center;
