--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   text-align: left;
-  color: #282c34;
+  color: #f3f5f7;
   min-height: 100vh;
   align-items: left;
   justify-content: flex-start;
